# MultiAgentSystem

./: .gitignore  README.md  app.py  requirements.txt  test_email.py
Scraper/: .env  requirements_v2.txt  scraper.py  scraper_v2.py
Send/: Send.py
System/: .env  pyproject.toml
System/src/system/: crew.py  main.py
System/src/system/config/: agents.yaml  tasks.yaml
System/src/system/tools/: email_tool.py  url_tool.py
competitor_validation/: llm_client.py  main.py  sample_input.py  schemas.py  source_fetchers.py  validator_agent.py
