[project]
name = "system"
version = "0.1.0"
description = "System using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]==1.14.1",
]

[project.scripts]
system = "system.main:run"
run_crew = "system.main:run"
train = "system.main:train"
replay = "system.main:replay"
test = "system.main:test"
run_with_trigger = "system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
